--- a/index.html
+++ b/index.html
@@ -9,27 +9,24 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/logo anrg.png" type="image/x-icon">
     <title>accessnetrg</title>
+
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.js"
+        integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
+        </script>
+
+    <!-- link to header and footer -->
+    <script>
+        $(function () {
+            $("#header").load("header.html");
+            $("#footer").load("footer.html");
+        });
+    </script>
+
 </head>
 
 <body>
-
-    <nav>
-        <div class="nav container">
-            <div class="logo">
-                <a href="index.html">
-                    <img src="images/logo anrg.png" alt="">
-                </a>
-            </div>
-            <ul>
-                <li><a href="https://anrg-belajar.blogspot.com/">blog</a></li>
-                <li><a href="reseacrh.html">research</a></li>
-                <li><a href="http://lms.cpsrg.org/">practicum</a></li>
-            </ul>
-        </div>
-    </nav>
-    <div class="progress-container">
-        <div class="progress-bar" id="myBar"></div>
-    </div>
+    <div id="header"></div>
 
     <main>
         <div class="hero">
@@ -146,43 +143,7 @@
         </div>
     </main>
 
-    <footer>
-        <div class="container">
-            <hr>
-            <div class="footer-text">
-                <ul>
-                    <li><a href="https://telkomuniversity.ac.id/en/">telkom University</a></li>
-                </ul>
-                <ul>
-                    <li><a href="index.html">accessnet rg</a></li>
-                    <li><a href="http://lms.cpsrg.org/">practicum</a></li>
-                </ul>
-                <ul>
-                    <li><a href="https://www.youtube.com/channel/UC42GWeJoc8HCQ2iIo7Cl9xA">youtube</a></li>
-                    <li><a href="https://www.instagram.com/cpslaboratory/">instagram</a></li>
-                    <li>accessnetrg@gmail.com</li>
-                    <li>line @jsj1167b</li>
-                </ul>
-            </div>
-            <div class="footer-block">
-                <p>&copy; accessnet rg / cps lab 2021</p>
-                <p>design by <a href="https://hamdanltf.github.io/">hamdanltf</a>
-                </p>
-            </div>
-        </div>
-    </footer>
-
-    <script>
-        // When the user scrolls the page, execute myFunction 
-        window.onscroll = function () { myFunction() };
-
-        function myFunction() {
-            var winScroll = document.body.scrollTop || document.documentElement.scrollTop;
-            var height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
-            var scrolled = (winScroll / height) * 100;
-            document.getElementById("myBar").style.width = scrolled + "%";
-        }
-    </script>
+    <div id="footer"></div>
 
 </body>
 
