--- a/iot.html
+++ b/iot.html
@@ -32,7 +32,7 @@
         <div class="hero">
             <div class="block"></div>
             <div class="inner-hero-research container">
-                <div class="hero-text">
+                <div class="hero-text hero-mobile">
                     <div class="red">
                         <p>iot</p>
                     </div>
@@ -62,7 +62,7 @@
                     <p>smart door system prototype biometric</p>
                 </div>
                 <div class="content-img-act">
-                    <a href=""><b>see demo on our channel &rarr;</b></a>
+                    <a href=""><b>see on our channel &rarr;</b></a>
                 </div>
             </div>
         </div>
