--- a/reseacrh.html
+++ b/reseacrh.html
@@ -41,7 +41,7 @@
                     </ul>
                 </div>
                 <div class="l-wing">
-                    <div class="hero-text">
+                    <div class="hero-text hero-mobile">
                         <div class="red">
                             <p>our</p>
                         </div>
