--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/logo anrg.png" type="image/x-icon">
@@ -84,7 +85,7 @@
             </div>
             <div class="wing">
                 <div class="space"></div>
-                <div class="content">
+                <div class="content content-mobile">
                     <div class="content-text ">
                         <ul class="division">
                             <li>cellular</li>
