--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <div class="hero">
             <div class="block"></div>
-            <div class="inner-hero container">
+            <div class="inner-hero inner-hero-mobile container">
                 <div class="hero-text">
                     <div class="red">
                         <p>access network</p>
