fix padding on responsive

--- a/iot.html
+++ b/iot.html
@@ -45,7 +45,7 @@
 
         <div class="container title">
             <div class="space"></div>
-            <div class="content-act">
+            <div class="content-act content-iot">
                 <div class="content-img-act">
                     <img src="images/crazyrich.jpg" alt="">
                     <b>ratnasih</b>
