add assistant photo

--- a/team.html
+++ b/team.html
@@ -44,67 +44,67 @@
             <div class="space"></div>
             <div class="content-act">
                 <div class="content-img-act">
-                    <img src="images/crazyrich.jpg" alt="">
+                    <img src="assistant/LTE.svg" alt="">
                     <b>muhammad hamdan latief</b>
                     <p>assistant coordinator</p>
                 </div>
                 <div class="content-img-act">
-                    <img src="images/crazyrich.jpg" alt="">
+                    <img src="assistant/DIR.svg" alt="">
                     <b>nadira mumtaz</b>
                     <p>first secretary</p>
                 </div>
                 <div class="content-img-act">
-                    <img src="images/crazyrich.jpg" alt="">
+                    <img src="assistant/HNA.svg" alt="">
                     <b>hana rizky herdika</b>
                     <p>second secretary</p>
                 </div>
                 <div class="content-img-act">
-                    <img src="images/crazyrich.jpg" alt="">
+                    <img src="assistant/DYN.svg" alt="">
                     <b>diana pangesti</b>
                     <p>treasury and iot coordinator</p>
                 </div>
                 <div class="content-img-act">
-                    <img src="images/crazyrich.jpg" alt="">
+                    <img src="assistant/AJI.svg" alt="">
                     <b>aji nur sanyoto</b>
                     <p>cellular coordinator</p>
                 </div>
                 <div class="content-img-act">
-                    <img src="images/crazyrich.jpg" alt="">
+                    <img src="assistant/ADM.svg" alt="">
                     <b>adam audia izzati</b>
                     <p>ad-hoc coordinator</p>
                 </div>
                 <div class="content-img-act">
-                    <img src="images/crazyrich.jpg" alt="">
+                    <img src="assistant/HAN.svg" alt="">
                     <b>muhammad farhan nugroho</b>
                     <p>health and safety coordinator</p>
                 </div>
                 <div class="content-img-act">
-                    <img src="images/crazyrich.jpg" alt="">
+                    <img src="assistant/REY.svg" alt="">
                     <b>safida reynitasari</b>
                     <p>seminar coordinator</p>
                 </div>
                 <div class="content-img-act">
-                    <img src="images/crazyrich.jpg" alt="">
+                    <img src="assistant/FDL.svg" alt="">
                     <b>yoga fadhilah</b>
                     <p>seminar vice coordinator</p>
                 </div>
                 <div class="content-img-act">
-                    <img src="images/crazyrich.jpg" alt="">
+                    <img src="assistant/ZAL.svg" alt="">
                     <b>syafrizal mahendra</b>
                     <p>maintenance coordinator</p>
                 </div>
                 <div class="content-img-act">
-                    <img src="images/crazyrich.jpg" alt="">
+                    <img src="assistant/RRS.svg" alt="">
                     <b>ramadhan risky setyaji</b>
                     <p>practicum coordinator</p>
                 </div>
                 <div class="content-img-act">
-                    <img src="images/crazyrich.jpg" alt="">
+                    <img src="assistant/CIN.svg" alt="">
                     <b>chintya auliya</b>
                     <p>access academy coordinator</p>
                 </div>
                 <div class="content-img-act">
-                    <img src="images/crazyrich.jpg" alt="">
+                    <img src="assistant/NAB.svg" alt="">
                     <b>siti nabilla ainun taqwa</b>
                     <p>recruitment coordinator</p>
                 </div>
