fix header and footer
add dropdown on navbar, add font-awesome on footer

--- a/footer.html
+++ b/footer.html
@@ -3,22 +3,29 @@
         <hr>
         <div class="footer-text">
             <ul>
-                <li><a href="https://telkomuniversity.ac.id/en/">telkom University</a></li>
+                <li><a href="https://telkomuniversity.ac.id/en/"><i class="fas fa-university"></i> telkom
+                        University</a></li>
             </ul>
             <ul>
-                <li><a href="../index.html">accessnet rg</a></li>
-                <li><a href="http://lms.cpsrg.org/">practicum</a></li>
+                <li><a href="index.html#">
+                        <i class="fas fa-graduation-cap"></i> accessnet rg
+                    </a></li>
+                <li><a href="http://lms.cpsrg.org/"><i class="fas fa-graduation-cap"></i> practicum</a></li>
             </ul>
             <ul>
-                <li><a href="https://www.youtube.com/channel/UC42GWeJoc8HCQ2iIo7Cl9xA">youtube</a></li>
-                <li><a href="https://www.instagram.com/cpslaboratory/">instagram</a></li>
-                <li>accessnetrg@gmail.com</li>
-                <li>line @jsj1167b</li>
+                <li><a href="https://www.youtube.com/channel/UC42GWeJoc8HCQ2iIo7Cl9xA"><i
+                            class="fab fa-youtube-square"></i>
+                        youtube</a></li>
+                <li><a href="https://www.instagram.com/cpslaboratory/"><i class="fab fa-instagram-square"></i>
+                        instagram</a>
+                </li>
+                <li><i class="fas fa-envelope-square"></i> accessnetrg@gmail.com</li>
+                <li><i class="fab fa-line"></i> line @jsj1167b</li>
             </ul>
         </div>
         <div class="footer-block">
-            <p>&copy; accessnet rg / cps lab 2021</p>
-            <p>design by <a href="https://hamdanltf.github.io/">hamdanltf</a>
+            <p>accessnet rg / cps lab</p>
+            <p>Copyright &copy; 2021 | <a href="https://hamdanltf.github.io/">template by hamdanltf</a>
             </p>
         </div>
     </div>
