--- a/header.html
+++ b/header.html
@@ -1,3 +1,8 @@
+<head>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/9c25bbcaad.js" crossorigin="anonymous"></script>
+</head>
+
 <nav>
     <div class="nav container">
         <div class="logo">
@@ -7,7 +12,19 @@
         </div>
         <ul>
             <li><a href="https://anrg-belajar.blogspot.com/">blog</a></li>
-            <li><a href="reseacrh.html">research</a></li>
+            <li>
+                <div class="dropdown">
+                    <button class="dropbtn"><a href="research.html">research</a>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="research.html#cell">cellular</a>
+                        <a href="research.html#adhoc">ad-hoc</a>
+                        <a href="research.html#iot">iot</a>
+                        <hr class="hr-nav">
+                        <a href="research.html#collab">join us</a>
+                    </div>
+                </div>
+            </li>
             <li><a href="http://lms.cpsrg.org/">practicum</a></li>
         </ul>
     </div>
