--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link rel="shortcut icon" href="images/logo anrg.png" type="image/x-icon">
     <title>accessnetrg</title>
 
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/9c25bbcaad.js" crossorigin="anonymous"></script>
+
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous">
@@ -70,7 +73,7 @@
                             Telkom University.</p>
                         <br>
                         <a href="team.html">
-                            <i>our team &rarr;</i>
+                            our team &rarr;
                         </a>
                     </div>
                 </div>
@@ -91,7 +94,7 @@
                             <li>cellular</li>
                             <li>ad-hoc</li>
                             <li>internet of things</li>
-                            <li><a href="reseacrh.html">learn more &rarr;</a></li>
+                            <li><a href="research.html">learn more &rarr;</a></li>
                         </ul>
                     </div>
                     <div class="content-img">
