delete unused element

--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
                 <img src="images/logo anrg.png" alt="">
             </a>
         </div>
-        <ul>
+        <ul class="nav-links">
             <li><a href="https://anrg-belajar.blogspot.com/">blog</a></li>
             <li>
                 <div class="dropdown">
