responsive navbar added
i'm f**king hate js >:(

--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
                 <img src="images/logo anrg.png" alt="">
             </a>
         </div>
-        <ul class="nav-links">
+        <ul>
             <li><a href="https://anrg-belajar.blogspot.com/">blog</a></li>
             <li>
                 <div class="dropdown">
@@ -27,8 +27,17 @@
             </li>
             <li><a href="http://lms.cpsrg.org/">practicum</a></li>
         </ul>
+
+        <div class="bigmac">
+            <input type="checkbox">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
 </nav>
 <div class="progress-container">
     <div class="progress-bar" id="myBar"></div>
 </div>
+
+<script src="js/bigmac.js"></script>
