fix navbar not working on research and inbox

--- a/header.html
+++ b/header.html
@@ -1,4 +1,7 @@
 <head>
+    <!-- sweet alert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/9c25bbcaad.js" crossorigin="anonymous"></script>
 </head>
@@ -6,7 +9,7 @@
 <nav>
     <div class="nav container">
         <div class="logo">
-            <a href="index.html">
+            <a href="index.html#">
                 <img src="images/logo anrg.png" alt="">
             </a>
         </div>
@@ -14,14 +17,14 @@
             <li><a href="https://anrg-belajar.blogspot.com/">blog</a></li>
             <li>
                 <div class="dropdown">
-                    <button class="dropbtn"><a href="research.html">research</a>
+                    <button class="dropbtn"><a href="research.html#">research</a>
                     </button>
                     <div class="dropdown-content">
                         <a href="research.html#cell">cellular</a>
                         <a href="research.html#adhoc">ad-hoc</a>
                         <a href="research.html#iot">iot</a>
                         <hr class="hr-nav">
-                        <a href="research.html#collab">join us</a>
+                        <a href="research.html#collab">collab with us</a>
                     </div>
                 </div>
             </li>
