--- a/iot.html
+++ b/iot.html
@@ -32,12 +32,22 @@
         <div class="hero">
             <div class="block"></div>
             <div class="inner-hero-research container">
-                <div class="hero-text hero-mobile">
-                    <div class="red">
-                        <p>iot</p>
-                    </div>
-                    <div class="black">
-                        <p>research</p>
+                <div class="s-wing iot">
+                    <ul>
+                        <li><a href="research.html#cell">cellular</a></li>
+                        <li><a href="research.html#adhoc">ad-hoc network</a></li>
+                        <li><a href="research.html#iot">internet of things</a></li>
+                        <li><a href="research.html#collab">collab with us</a></li>
+                    </ul>
+                </div>
+                <div class="l-wing">
+                    <div class="hero-text hero-mobile">
+                        <div class="red">
+                            <p>iot</p>
+                        </div>
+                        <div class="black">
+                            <p>research</p>
+                        </div>
                     </div>
                 </div>
             </div>
