--- a/header.html
+++ b/header.html
@@ -15,6 +15,7 @@
         </div>
         <ul>
             <li><a href="https://anrg-belajar.blogspot.com/">blog</a></li>
+            <li><a href="team.html#">team</a></li>
             <li>
                 <div class="dropdown">
                     <button class="dropbtn"><a href="research.html#">research</a>
